# AI-Tutor

./: AITutor_Audit_Enterprise_Reference.docx  GovExam_AI_Tutor_Master_Roadmap.docx
backend/: .gitignore  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  seed_mock_test.py
backend/app/: agent.py  main.py
backend/app/core/: auth.py  config.py  error_handler.py
backend/app/models/: database.py
backend/app/schemas/: mock_test.py
backend/modules/: data_analyzer.py  embeddings.py  faiss_index.py  rag.py  tutor.py  utils.py
frontend/: package-lock.json  package.json
frontend/app/: AppLayout.tsx  globals.css  layout.tsx  page.tsx  template.tsx
frontend/app/dashboard/: page.tsx
frontend/app/error-log/: page.tsx
frontend/app/login/: page.tsx
frontend/app/mock-tests/: page.tsx
frontend/app/mock-tests/[id]/: page.tsx
frontend/app/practice/: page.tsx
frontend/app/progress/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/tutor/: page.tsx
frontend/components/ui/: Blackhole.tsx  CosmicBackground.tsx
frontend/store/: useAppStore.ts
