[project]
name = "ibps-so-ai"
version = "2.0.0"
description = "Enterprise AI Tutor for IBPS SO & Government Exams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",                    # rate limiting
    "groq>=0.11.0",
    "sentence-transformers>=3.1.0",
    "faiss-cpu>=1.10.0",                 # or faiss-gpu if you have GPU
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "structlog>=24.4.0",                 # better logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "pip-audit>=2.7.0",
]

[tool.uv]
dev-dependencies = ["ibps-so-ai[dev]"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"